reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_nested_external_input.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructWithNestedExternal::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithNestedExternal",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "reflect_demo::test_lib::TestStructNested"
          }
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflect_demo::test_lib::TestStructNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::string::String"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String"
    }
  ]
}
