reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_nested_external_output.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructWithNestedExternal::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "name": "reflect_demo::test::TestStructWithNestedExternal",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "reflect_demo::test_lib::TestStructNested"
          }
        }
      ]
    },
    {
      "name": "reflect_demo::test_lib::TestStructNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::string::String"
          }
        }
      ]
    },
    {
      "name": "std::string::String"
    }
  ]
}
