reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_nested_output.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructWithNested::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "name": "reflect_demo::test::TestStructNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "String"
          }
        }
      ]
    },
    {
      "name": "reflect_demo::test::TestStructWithNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "reflect_demo::test::TestStructNested"
          }
        }
      ]
    }
  ]
}
