reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_self_via_arc_output.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructWithSelfViaArc::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithSelfViaArc",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::sync::Arc",
            "parameters": [
              {
                "name": "reflect_demo::test::TestStructWithSelfViaArc"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::sync::Arc",
      "description": "Pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    }
  ]
}
